...
              format: 'multi',
            ),
          ),
          Expanded(
            child: _buildFormatButton(
              context,
              'Нэг төрлөөр\nтойрох',
              Colors.blue,
              'assets/a kind.jpg',
              format: 'single',
            ),
          ),
          Expanded(
...
